Koble innsending rest tjeneste med prosesstask for journalføring (#9)
* lagre dokumenter

* Refactor document handling: rename task class and methods, update document properties for better clarity

* Videre opprydding

---------

Co-authored-by: johannbm <johannes.moskvil@gmail.com>